--- a/hytnmtmtklsn.htm
+++ b/hytnmtmtklsn.htm
@@ -6,6 +6,45 @@
 <meta http-equiv="Content-Language" content="tr">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <title>Matematiğin Aydınlık Dünyası</title>
+	<style>
+		<!--
+		span.gmaintitle1 {
+			font-family: Arial;
+			color: #DD6600;
+			font-weight: bold
+		}
+
+		table.MsoNormalTable {
+			mso-style-parent: "";
+			font-size: 10.0pt;
+			font-family: "Times New Roman";
+		}
+
+		video {
+			max-width: 100%;
+			height: auto;
+		}
+
+		.container {
+			position: relative;
+			overflow: hidden;
+			width: 100%;
+			padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+		}
+
+		/* Then style the iframe to fit in the container div with full height and width */
+		.responsive-iframe {
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			width: 100%;
+			height: 100%;
+		}
+
+		-->
+	</style>
 <script language="JavaScript" fptype="dynamicanimation">
 <!--
 function dynAnimation() {}
@@ -17,13 +56,6 @@ function clickSwapImg() {}
 </head>
 
 <body link="#000080" vlink="#0066FF" text="#990000" onload="dynAnimation()" language="Javascript1.2">
-
-<div id="contentframe">
-	<iframe width="420" height="315"
-			src="https://www.youtube.com/embed/PGzeYgNwWug?autoplay=1&mute=1"
-			style="height:70%;width:59%;position:absolute;top:486px;left:420px;">&lt;/div&gt;>
-	</iframe>
-</div>
 
 <style>
 	a {
@@ -59,7 +91,19 @@ function clickSwapImg() {}
 		bugünkü muazzam şeklini 
 		almıştır. Globalleşen dünyadan bu bilim de nasibini almış ve matematik 
 		dünyanın her yerinde 
-		insanların çalıştığı evrensel bir dil olmuştur.</span></font><p>&nbsp;</td>
+		insanların çalıştığı evrensel bir dil olmuştur.</span></font>
+
+			<div id="contentframe">
+				<p align="center">&nbsp;
+
+					<iframe width="420" height="315"
+							src="https://www.youtube.com/embed/PGzeYgNwWug?autoplay=1&mute=1"
+							style="position:relative;">
+					</iframe>
+				</p>
+			</div>
+			</p>&nbsp;</td>
+
 		<td rowspan="12" valign="top" width="4">
 		<p align="center">&nbsp;</td>
 	</tr>
@@ -133,6 +177,20 @@ function clickSwapImg() {}
 			<br>
 			( <em>Platon</em> )</span></a></b>&nbsp;</p>
 		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p><p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p><p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
