--- a/ict.htm
+++ b/ict.htm
@@ -6,6 +6,50 @@
     <meta http-equiv="Content-Language" content="tr">
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
     <title>Matematiğin Aydınlık Dünyası</title>
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
+    <style>
+        <!--
+        span.gmaintitle1 {
+            font-family: Arial;
+            color: #DD6600;
+            font-weight: bold
+        }
+
+        table.MsoNormalTable {
+            mso-style-parent: "";
+            font-size: 10.0pt;
+            font-family: "Times New Roman";
+        }
+
+        video {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .container {
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+            padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+        }
+
+        /* Then style the iframe to fit in the container div with full height and width */
+        .responsive-iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        -->
+    </style>
     <script language="JavaScript" fptype="dynamicanimation">
         <!--
         function dynAnimation() {
@@ -22,6 +66,7 @@
 </head>
 
 <body link="#000080" vlink="#0066FF" text="#990000" onload="dynAnimation()" language="Javascript1.2">
+
 <style>
     a {
         text-decoration: none;
@@ -33,7 +78,7 @@
         <td width="226">&nbsp;<p>&nbsp;</td>
         <td rowspan="12" width="41">&nbsp;</td>
         <td rowspan="12" valign="top">
-            &nbsp;<p align="center"><b><a name="i"></a>İCAT MI?, KEŞİF Mİ?</b>
+            &nbsp;<p align="center"><b>İCAT MI?, KEŞİF Mİ?</b>
             <p align="justify" style="line-height: 200%; margin-top: 12px; margin-bottom: 18px">
                 <font color="#0000CC"><b><font face="Times New Roman">Çoğu öğrencinin baş belâsı olarak
                         gördüğü matematiğin, ne olduğu ve nereden çıktığı hususunda mevcut iki görüşten biri Eflatuna
@@ -117,9 +162,9 @@
             <p align="center">&nbsp;</td>
     </tr>
     <tr>
+
         <td width="226" bgcolor="#FFFF66" align="center">
-            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
-               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
                 <a href="index.htm"><span style="text-decoration: none">Ana Sayfa</span></a></b></p>
         </td>
     </tr>
@@ -130,73 +175,58 @@
     </tr>
     <tr>
         <td width="226" bgcolor="#FFFF66" align="center">
-            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
-               onmouseout="rollOut(this)" language="Javascript1.2"><b>
-                <a href="hytnmtmtklsn.htm"><span style="text-decoration: none">Hayatın Matematik Lisanı</span></a></b>
-            </p>
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="hytnmtmtklsn.htm"><span style="text-decoration: none">Hayatın Matematik Lisanı</span></a></b></p>
         </td>
     </tr>
     <tr>
         <td width="226" bgcolor="#FFFF66" align="center">
-            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
-               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
                 <a href="ict.htm"><span style="text-decoration: none">İcat mı?, Keşif mi?</span></a></b></p>
         </td>
     </tr>
     <tr>
         <td width="226" bgcolor="#FFFF66" align="center">
-            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
-               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
                 <a href="stlr.htm"><span style="text-decoration: none">Nerede Satılır?</span></a></b></p>
         </td>
     </tr>
     <tr>
         <td width="226" bgcolor="#FFFF66" align="center">
-            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
-               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
                 <a href="krl.htm"><span style="text-decoration: none">Bizim de Kralımız Var
 		</span></a>
-            </b></p>
+            </b> </p>
         </td>
     </tr>
     <tr>
         <td width="226" bgcolor="#FFFF66" align="center">
-            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
-               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
                 <a href="sgdnsy.htm"><span style="text-decoration: none">Sağdan Say</span></a></b></p>
         </td>
     </tr>
     <tr>
         <td width="226" bgcolor="#FFFF66" align="center">
-            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
-               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
                 <a href="sfr.htm"><span style="text-decoration: none">Sıfır Deyip Geçme!</span></a></b></p>
         </td>
     </tr>
     <tr>
         <td width="226" bgcolor="#FFFF66" align="center">
-            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
-               onmouseout="rollOut(this)" language="Javascript1.2"><b>
-                <a href="ckltsı.htm"><span style="text-decoration: none">
-		</span><span style="text-decoration: none">
-		<a href="ckltsi.htm"><span style="text-decoration: none">Çakıl Taşlarında Bilim 
-		</span></a> 
-		</span></a>
-            </b></p>
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
+                <a href="ckltsi.htm"><span style="text-decoration: none">Çakıl Taşlarında Bilim
+		</span></a></a>
+            </b> </p>
         </td>
     </tr>
     <tr>
         <td width="226" bgcolor="#FFFF66" align="center">
-            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)"
-               onmouseout="rollOut(this)" language="Javascript1.2"><b>
+            <p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
                 <a href="kmsl.htm"><span style="text-decoration: none">Kumsalda Final</span></a></b></p>
         </td>
     </tr>
     <tr>
-        <td width="226" bgcolor="#FFFF66" align="center"><p dynamicanimation="fpAnimformatRolloverFP1"
-                                                            fprolloverstyle="letter-spacing: 1"
-                                                            onmouseover="rollIn(this)" onmouseout="rollOut(this)"
-                                                            language="Javascript1.2"><b>
+        <td width="226" bgcolor="#FFFF66" align="center">&nbsp<p dynamicanimation="fpAnimformatRolloverFP1" fprolloverstyle="letter-spacing: 1" onmouseover="rollIn(this)" onmouseout="rollOut(this)" language="Javascript1.2"><b>
             <a href="0.htm"><span style="text-decoration: none" align="center">"Geometri Bilmeyen Bu Kapıdan Giremez!"
 			<br>
 			( <em>Platon</em> )</span></a></b>&nbsp;</p>
@@ -214,7 +244,70 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
-
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p><p>&nbsp;</p>
+            <p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p><p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p><p>&nbsp;</p>
+            <p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p><p>&nbsp;</p>
+            <p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p><p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p><p>&nbsp;</p>
+            <p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p><p>&nbsp;</p>
+            <p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p><p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p><p>&nbsp;</p>
+            <p>&nbsp;</p> <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
         </td>
     </tr>
 </table>
