--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,45 @@
 <meta http-equiv="Content-Language" content="tr">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <title>Matematiğin Aydınlık Dünyası</title>
+	<style>
+		<!--
+		span.gmaintitle1 {
+			font-family: Arial;
+			color: #DD6600;
+			font-weight: bold
+		}
+
+		table.MsoNormalTable {
+			mso-style-parent: "";
+			font-size: 10.0pt;
+			font-family: "Times New Roman";
+		}
+
+		video {
+			max-width: 100%;
+			height: auto;
+		}
+
+		.container {
+			position: relative;
+			overflow: hidden;
+			width: 100%;
+			padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+		}
+
+		/* Then style the iframe to fit in the container div with full height and width */
+		.responsive-iframe {
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			width: 100%;
+			height: 100%;
+		}
+
+		-->
+	</style>
 <script language="JavaScript" fptype="dynamicanimation">
 
 function dynAnimation() {}
@@ -17,13 +56,6 @@ function clickSwapImg() {}
 </head>
 
 <body link="#000080" vlink="#0066FF" text="#990000" onload="dynAnimation()" language="Javascript1.2">
-
-<div id="contentframe">
-	<iframe width="420" height="315"
-			src="https://www.youtube.com/embed/LZr_iNxG444?autoplay=1&mute=1"
-			style="height:55%;width:59%;position:absolute;top:486px;left:420px;">&lt;/div&gt;>
-	</iframe>
-</div>
 
 <table border="0" width="90%" cellspacing="7" id="table1">
 	<tr>
@@ -44,14 +76,24 @@ function clickSwapImg() {}
 		birbirlerinin kulağına fısıldadığı anlaşılmaz kavramlardan oluşan bilgiler 
 		yumağı değildir. Matematik, hayatını dolu dolu yaşamış insanların sevinçleri, üzüntüleri, 
 		başarı ve yenilgileriyle oluşturdukları bir insanlık macerasıdır. </font></b>
-		<p align="center" style="margin-top: 12px; margin-bottom: 18px"><font color="#0000CC"><b>&quot;Matematik ki vardır, gerisi vesairedir!&quot;</b></font><p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;<p align="left" style="margin-top: 12px; margin-bottom: 6px">
-			<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<p align="center" style="margin-top: 12px; margin-bottom: 18px"><font color="#0000CC"><b>&quot;Matematik ki vardır, gerisi vesairedir!&quot;</b></font><p align="center" style="margin-top: 12px; margin-bottom: 12px">&nbsp;
+			<br>
+			<div id="contentframe">
+				<p align="center">&nbsp;
+
+					<iframe width="420" height="315"
+							src="https://www.youtube.com/embed/LZr_iNxG444?autoplay=1&mute=1"
+							style="position:relative;">
+					</iframe>
+				</p>
+			</div>
+			<br><br>
 			<font color="#0000FF" size="2"><i>Bu site Prof. Dr. Ali Sinan Sertöz'ün "Matematiğin
 		Aydınlık Dünyası" adlı kitabından faydalanılarak hazırlanmıştır.
 		<br>
 		</i></font><p align="left" style="margin-top: 12px; margin-bottom: 6px">
 		<font color="#0000FF"><i><font size="2">Tasarım: Mustafa Ali Çetinkaya<br>
-		Son Güncellenme Tarihi: 14/01/2023</font></i></font><p>&nbsp;</td>
+		Son Güncellenme Tarihi: 15/01/2023</font></i></font><p>&nbsp;</td>
 		<td rowspan="12" valign="top" width="4">
 		<p align="center">&nbsp;</td>
 	</tr>
@@ -129,6 +171,20 @@ function clickSwapImg() {}
 			<br>
 			( <em>Platon</em> )</span></a></b>&nbsp;</p>
 		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>	<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>	<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
